Finish Functional API and Update README
