# docs/apidoc/openapi.yml
@@ -6,7 +6,7 @@ info:
 
 servers:
   - description: The server for the API
-    url: https://pbqnjc55c3.execute-api.us-east-1.amazonaws.com/{basePath}
+    url: https://nezqwerft9.execute-api.us-east-1.amazonaws.com/{basePath}
     variables:
       basePath:
         default: api/v1
@@ -17,6 +17,8 @@ paths:
       summary: Creates a New User
       parameters:
         - name: X-Api-Key
+          schema:
+            type: string
           in: header
           description: Api Key provided in order to integrate Apps
           required: true
@@ -42,6 +44,8 @@ paths:
       summary: Creates a new Access Token for authenticated requests.
       parameters:
         - name: X-Api-Key
+          schema:
+            type: string
           in: header
           description: Api Key provided in order to integrate Apps
           required: true
@@ -70,6 +74,8 @@ paths:
         - JWT: []
       parameters:
         - name: X-Api-Key
+          schema:
+            type: string
           in: header
           description: Api Key provided in order to integrate Apps
           required: true
@@ -84,76 +90,190 @@ paths:
           description: Unauthorized
         403:
           description: Forbidden
+  /operations:
+    post:
+      summary: Perform a new Operation.
+      security:
+        - JWT: [ ]
+      parameters:
+        - name: X-Api-Key
+          schema:
+            type: string
+          in: header
+          description: Api Key provided in order to integrate Apps
+          required: true
+      requestBody:
+        content:
+          "application/vnd.api+json":
+            schema:
+              $ref: "#/components/schemas/CreateOperation"
+      responses:
+        201:
+          description: Created
+          content:
+            "application/vnd.api+json":
+              schema:
+                $ref: "#/components/schemas/OperationResult"
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+        404:
+          description: Not Found
+        400:
+          description: Bad Request
 
+  /records:
+    get:
+      summary: Get List of Records
+      security:
+        - JWT: []
+      parameters:
+        - name: X-Api-Key
+          schema:
+            type: string
+          in: header
+          description: Api Key provided in order to integrate Apps
+          required: true
+      responses:
+        200:
+          description: Success
+          content:
+            "application/vnd.api+json":
+              schema:
+                $ref: "#/components/schemas/RecordResult"
 
 
 components:
   schemas:
+    RecordResult:
+      type: object
+      properties:
+        data:
+          type: array
+          required:
+            - data
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+              id:
+                type: string
+              attributes:
+                type: object
+                properties:
+                  operation_id:
+                    type: integer
+                  user_id:
+                    type: string
+
+                  amount:
+                    type: integer
+
+                  user_balance:
+                    type: integer
+                  operation_response:
+                    oneOf:
+                      - type: integer
+                      - type: string
+                  date:
+                    type: string
+    OperationResult:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            type:
+              type: string
+            id:
+              type: string
+            attributes:
+              type: object
+              properties:
+                operation_id:
+                  type: integer
+                user_id:
+                  type: string
+                amount:
+                  type: integer
+                user_balance:
+                  type: integer
+                operation_response:
+                  oneOf:
+                    - type: integer
+                    - type: string
+                date:
+                  type: string
+    CreateOperation:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            type:
+              type: string
+            attributes:
+              type: object
+              properties:
+                operation_id:
+                  type: integer
+                operands:
+                  type: array
+                  minItems: 1
+                  maxItems: 2
+                  items:
+                    type: integer
     UserRequest:
       type: object
       properties:
         data:
           type: object
-          required: true
           properties:
             username:
               type: string
-              required: true
             password:
               type: string
-              required: true
     UserCreated:
       type: object
       properties:
         data:
           type: object
-          required: true
           properties:
             type:
               type: string
-              required: true
             id:
               type: string
-              required: true
             attributes:
               type: object
-              required: true
               properties:
                 username:
                   type: string
-                  required: true
                 status:
                   type: string
-                  required: true
     LoginSuccess:
       type: object
       properties:
         data:
           type: object
-          required: true
           properties:
             type:
               type: string
-              required: true
             id:
               type: string
-              required: true
             attributes:
               type: object
-              required: true
               properties:
                 access_token:
                   type: string
-                  required: true
                 expires_in:
                   type: integer
-                  required: true
     OperationsSuccess:
       type: object
       properties:
         data:
           type: array
-          required: true
           items:
             properties:
               type:
@@ -168,10 +288,9 @@ components:
                   cost:
                     type: integer
 
-
   securitySchemes:
     JWT:
       type: http
-      bearerFormat: bearer
+      bearerFormat: Bearer
       description: Access token provided by POST /users/tokens
-      scheme: Bearer
+      scheme: bearer
