# src/model/record.py
@@ -5,10 +5,10 @@ from typing import Any
 class Record:
     def __init__(self, operation_id, user_id, user_balance, amount, operation_response, record_id=None):
         self.record_id = record_id
-        self.operation_id = operation_id
+        self.operation_id = int(operation_id)
         self.user_id = user_id
-        self.user_balance = user_balance
-        self.amount = amount
+        self.user_balance = int(user_balance)
+        self.amount = int(amount)
         self.operation_response = operation_response
         self.date = datetime.datetime.now()
 
