# src/model/record_repository.py
@@ -3,12 +3,12 @@ import boto3
 import uuid
 from src.model.record import Record
 
+
 class RecordRepository:
-    CLASS_NAME = 'Record'
 
     def __init__(self):
         self.client = boto3.client('dynamodb')
-        self.table_name = os.getenv('CALC_TABLE')
+        self.table_name = os.getenv('CALC_TABLE', 'CalcTable')
 
     def get_last_record(self, user_id):
         return self.client.query(
@@ -39,7 +39,7 @@ class RecordRepository:
                     'N': str(record.user_balance),
                 },
                 'Amount': {
-                    'S': str(record.amount)
+                    'N': str(record.amount)
                 },
                 'OperationResponse': {
                     'S': str(record.operation_response)
@@ -49,3 +49,29 @@ class RecordRepository:
                 }
             }
         )
+
+    def get_records(self, user_id: str,):
+        paginator = self.client.get_paginator('query')
+        params = {
+            'TableName': self.table_name,
+            'IndexName': 'UserIdDate',
+            'KeyConditionExpression': 'UserId = :userId',
+            'ExpressionAttributeValues': {
+                ':userId': {'S': user_id}
+            },
+            'ScanIndexForward': False
+        }
+        page_iterator = paginator.paginate(**params)
+        print('RESULT KEYS', page_iterator.result_keys)
+        resp = []
+        for record in page_iterator:
+            for item in record['Items']:
+                resp.append(Record(
+                    item['OperationId']['N'],
+                    item['UserId']['S'],
+                    item['UserBalance']['N'],
+                    item['Amount']['N'],
+                    item['OperationResponse']['S'],
+                    item['RecordId']['S']
+                ))
+        return resp
